--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,10 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/stars.css">
 
+
 <div class="row">
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
         <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => {  %>
@@ -23,6 +25,7 @@
             </a>
             <% } %>
         </div>
+
 
         <div class="card mb-3">
             <div class="card-body">
@@ -99,3 +102,11 @@
         <% } %>
     </div>
 </div>
+
+
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground =<%-JSON.stringify(campground)%>
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
